--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -16,6 +16,21 @@
 <body>
 
 <!-- Navbar -->
+<div class="bg-info ">
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+
+      <div class="alert alert-warning alert-dismissible fade show bg-info text-white mb-0 px-0" role="alert">
+        <strong>Happy Meal!</strong> You should check in on our  <a href="menu.html" class="alert-link"> menu </a>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      
+    </div>
+    </div>
+    </div>
+  </div> 
 <header>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark ">
         <div class="container  ">
