--- a/Final project/index.html
+++ b/Final project/index.html
@@ -14,9 +14,9 @@
 <!-- Header -->
 
 <header>
- <!-- navbar -->
+ 
 
- <div class="comtainer">
+ <div class="container">
     <div class="row">
         <div class="col">
             <nav class="navbar navbar-expand-lg bg-body-none">
@@ -29,8 +29,8 @@
       <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
           <a class="nav-link active text-danger fw-bold " aria-current="page" href="index.html">Signup</a>
-          <a class="nav-link " href="about.html ">About</a>
-          <a class="nav-link " href="contact.html ">Contact</a>
+          <a class="nav-link " href="About.html">About</a>
+          <a class="nav-link " href="./Contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -39,14 +39,14 @@
     </div>
 </div>
 
-</header>
+</header> 
 
 <!-- Main -->
 <main>
     <div class="container">
     <div class="row my-5 ">
         <div class="col-sm-12 col-md-6 mt-5">
-       <p > <span class="bg-secondary text-danger p-2 rounded-5 "> Faster and Better </span></p> 
+       <p class="btn1 " > <span class="text-danger p-2 rounded-5 "> Faster and Better </span></p> 
        <h1 class="fw-bold ">Dialouge<br>Podcast<br>Generated<span class="text-danger"> by AI</span></h1>
        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit.  laudantium accusamus non hicme u
      </p>
@@ -58,30 +58,31 @@
             <img src="./Images/header.jpeg" alt="" class="w-100 " class="img-fluid"  > 
         </div>
     </div>
+  </div>
 
 <!-- Cards -->
 
 
-    <div class="py-5 bg-light">
-
-<div class="container mt-3">
-    <div class="row">
+   
+<div class=" bgc my-5">
+<div class="container mt-3 ">
+    <div class="row pt-5">
         <div class="col text-center">
             <p><span class="text-danger">How it works</span></p>
             <h1>One Click conversation <br>Podcasts</h1>
         </div>
     </div>
-    <div class="row mt-5">
-        <div class="col-sm-12 col-md-4">
+    <div class="row py-5 ">
+        <div class="col-sm-12 col-md-4 mb-3 mb-md-0">
             <div class="card w-100 text-center" >
-                <img src="./Images/pgimg1.png" class=" card-img-top" alt="..." >
+                <img src="./Images/pgimg1.png" class=" card-img-top" alt="..."  >
                 <div class="card-body text-center">
                     <h5>Upload url</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-4">
+            <div class="col-sm-12 col-md-4  mb-3 mb-md-0">
                 <div class="card w-100 text-center " >
                     <img src="./Images/pgimg2.png" class="card-img-top" alt="..." >
                     <div class="card-body text-center">
@@ -90,7 +91,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-12 col-md-4">
+                <div class="col-sm-12 col-md-4  mb-3 mb-md-0">
                     <div class="card w-100  text-center">
                         <img src="./Images/free.png" class="card-img-top" alt="..."  >
                         <div class="card-body text-center">
@@ -104,13 +105,10 @@
 </div>
 </div>
 
+
 </main>
 
-<!-- Footer -->
 
-<footer>
-
-</footer>
 
 
 
