--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -32,7 +32,7 @@
     </div>
   </div> 
 <header>
-    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark  " id="navbar11">
         <div class="container  ">
           <a class="navbar-brand" href="./index.html">Smart Kitchen</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -258,7 +258,7 @@
                 <p class="mb-0 text-center text-md-start"> &copy; 2023 All Rights Are Reserved</p>
             </div>
             <div  class=" d-none d-md-block col-md-7 text-end ">
-               <a href="javascript:void(0)" target="_blank" rel="noopener noreferrer"> Terms & Conditions</a> |
+               <a href="" target="_blank" rel="noopener noreferrer"> Terms & Conditions</a> |
                <a href="javascript:void(0)" target="_blank" rel="noopener noreferrer"> Privacy Polciy</a> |
                <a href="javascript:void(0)" target="_blank" rel="noopener noreferrer"> Order Policy</a>
             </div>
@@ -266,8 +266,6 @@
     </div>
 </div>
 </footer>
-
-
 
 
 
